<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Imitation</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- welcome activity -->
    <string name="str_welcome_tv_text1">微信，不只是个聊天工具</string>
    <string name="str_welcome_tv_text2">第一次，你可以使用透明背景的动画表情，来表达你此刻的心情</string>
    <string name="str_welcome_tv_text3">开始我的微信生活</string>
    <string name="str_welcome_iv_indicator_text">下面的多个点</string>
    <string name="str_welcome_iv_whatsnew_text">进入页面时左右分开的imageview</string>

    <!-- login activity -->
    <string name="btnLogin">登录</string>
    <string name="btnRegist">注册</string>
    <string name="tvusername">用户名</string>
    <string name="tvpassword">密码</string>
    <string name="send">发送</string>
    <string name="btnclose">关闭</string>
    <string name="strRememberMe">记住我</string>
    <string name="strExit">退出</string>

    <!-- login service -->
    <string name="url_login_loginIp">http://192.168.204.193:8080/Imitation/loginServlet</string>
    
    <!-- logout service -->
    <string name="url_logout_logoutIp">http://192.168.204.193:8080/Imitation/logoutServlet</string>

    <!-- register service -->
    <string name="url_register_registerIp">http://192.168.204.193:8080/Imitation/registerServlet</string>

    <!-- publish AsyncTask -->
    <string name="url_publish_signatureIp">http://192.168.204.193:8080/Imitation/publishSignatureServlet</string>
    <string name="url_publish_addfriendIp">http://192.168.204.193:8080/Imitation/publishAddFriendServlet</string>
    <string name="url_publish_frienddata">http://192.168.204.193:8080/Imitation/publishFriendDataServlet</string>
    <string name="url_publish_imagedownloadpath">http://192.168.204.193:8080/Imitation/headphoto/</string>
    <string name="url_publish_imageuploadpath">http://192.168.204.193:8080/Imitation/publishHeadPhotoServlet</string>
    
    <!-- main function activity -->
    <!-- "我的好友", "最近访客", "快速发布", "我的日志", "我的相册 -->
    <string name="strMyFriend">我的好友</string>
    <string name="strRecentVisitor">最近访客</string>
    <string name="strQuickPublish">快速发布</string>
    <string name="strMyDiary">我的日志</string>
    <string name="strMyAlbum">我的相册</string>

    <!-- database -->
    <string name="database_prepath">/Imitation/</string>
    <string name="database_path">/Imitation/database/</string>    
    <string name="database_name">imitation.db</string>        
    
    <!-- person -->
    <string name="person_headPhotoPath">/Imitation/</string>
    
    <!-- publish beans -->
    <string name="publish_friendDirectory">/FriendListHeadPhoto/</string>
    <string name="publish_selfDirectory">/HeadPhoto/</string>
    <string name="publish_headphotoName">headphoto0</string>
    <string name="publish_FriendList">FriendList</string>
    
    <!-- communication server port -->
    <string name="communication_port">9084</string>
    <string name="communication_address">http://192.168.204.193:8080/Imitation/communicationIPServlet</string>
    <string name="communication_voiceSavePath">/Imitation/tmpVoicePath/</string>
    
    <!-- chat record directory -->
    <string name="chat_directory">chattmp/</string>
    <string name="more">加载中</string>
    <string name="no_data">暂无数据</string>
    <string name="load_full">已加载全部</string>
</resources>